2007-09-04  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MainUI/SOGoUserHomePage.m ([SOGoUserHomePage -logoffAction]):
	set the cookie path to "/".

	* Main/SOGo.m ([SOGo -authenticatorInContext:_ctx]): choose the
	authenticator based on the request handler key. "dav" returns the
	SOGoDAVAuthenticator, anything else returns the Web authenticator.

	* SoObjects/SOGo/SOGoDAVAuthenticator.m: renamed module from
	"SOGoAuthenticator".

	* SoObjects/SOGo/SOGoWebAuthenticator.m: new class module
	implementing a subclass of SoCookieAuthenticator, designed for
	web-based cookie authentication of users.m

	* UI/MainUI/SOGoUserHomePage.m ([SOGoUserHomePage -logoffAction]):
	new method that resets the authentification cookie.

2007-08-29  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/LDAPSource.m ([LDAPSource
	-checkLogin:loginToCheckandPassword:passwordToCheck]): initialize
	didBind to NO to make sure no false authentication is returned if
	the bind operation is not executed.

2007-08-28  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoDraftObject.m: added support for the
	"In-Reply-To" header field when replying.

	* UI/MainUI/SOGoUserHomePage.m: add the "c_" prefix to the quick
	table field names that are queried.

	* SoObjects/Appointments/SOGoFreeBusyObject.m ([SOGoFreeBusyObject
	-iCalStringForFreeBusyInfos:_infosfrom:_startDateto:_endDate]):
	add the "c_" prefix to the quick table field names that are
	queried.

2007-08-24  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -lookupCalendarFolderForUID:uid]): add
	"personal" to the ocs path of the appointment folder.

	* UI/MailPartViewers/UIxMailPartViewer.m ([UIxMailPartViewer
	-flatContentAsString]): use latin1 when the encoding is not
	specified, and to reencode data chunk which were not correctly
	decoded with the original charset.
